corpus/c/storage_class/case-01/snapshots/gcc15_plus/dual_sink_structured/render.concise.txt
error: storage class or linkage conflict
--> src/main.c:2:12
help: use a single consistent storage class specifier and linkage for the declaration
why: static declaration of 'value' follows non-static declaration
| src/main.c:2:12
| static int value;
|            ^
note: previous declaration of 'value' with type 'int'
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output